added some style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@500&family=Tilt+Neon&family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +28,7 @@
     <main>
         <!--main content of the document-->
 
-        <section>
+        <section id="hero">
             <!--hero section, shows personal stuff-->
             <img src="/img/avataaars.png" alt="blonde man with short hair and happy expression">
 
@@ -38,7 +42,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section id="bio">
             <!--personal info (NOT TOO PERSONAL)-->
             <div>
                 <br>
@@ -46,8 +50,8 @@
                     I want to be...
                 </p>
                 <ul>
-                    <li>flexible</li>
-                    <li>SAFE!!!!</li>
+                    <li>mentally flexible</li>
+                    <li>safe</li>
                     <li>financially secure</li>
                     <li>free from my emotions and anxiety</li>
                 </ul>
@@ -61,7 +65,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section id="list">
             <!-- some things I enjoy-->
             <div>
                 <p>I enjoy...</p>
@@ -73,10 +77,10 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section id="song">
             <!--Song that speaks to me and my current situation-->
             <div>
-                <p>"Dry Bone Valley" Mastodon</p>
+                <h2>"Dry Bone Valley" Mastodon</h2>
                 <p>
                     Head down running from the beast<br>
                     Breakneck speed taking all my breath<br>
@@ -119,9 +123,9 @@
             </div>
         </section>
     </main>
-    <p>
-        © Jack Walsh 2023
-    </p>
+    <footer>
+        © Jack Walsh-2023
+    </footer>
 </body>
 
 </html>
