--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
 
         <!-- the header shows the logo and page title-->
-        <img src="/img/logo-96X96.svg" alt="blue origami bird">
+        <!--<img src="/img/logo-96X96.svg" alt="blue origami bird"> -->
 
         <h1>Web Dev I</h1>
 
@@ -54,28 +54,24 @@
                     <li>safe</li>
                     <li>financially secure</li>
                     <li>free from my emotions and anxiety</li>
+                    <li>work a nice defense job</li>
                 </ul>
                 <p>
                     I made my avitar happy not because I'm a happy person, but because I want to be. In reality I'm
                     scared to death of eveyone around me. By making my avitar happy, I make that my reality. I believe
-                    that if you speak what you want into reality, it becomes more possible! I want to be a good person
-                    and trying to relate to people I cant relate to has gotten me into trouble before. I cannot relate
-                    to everyone and there are people I can't help. Don't let me in on any secrets, I would perfer to be
-                    blissfuly ignorant.
+                    that if you speak what you want into reality, it becomes more possible! I want to be as good of a person I can be.  
                 </p>
             </div>
         </section>
-        <section id="list">
-            <!-- some things I enjoy-->
-            <div>
-                <p>I enjoy...</p>
-                <ul>
-                    <li>Music</li>
-                    <li>Programming</li>
-                    <li>Building Computers</li>
-                    <li>PC gaming</li>
-                </ul>
-            </div>
+        <section id="hobbies">
+            <h2>hobbies</h2>
+            <ul>
+                <li>PC gaming</li>
+                <li>Modern War history</li>
+                <li>Ice Hockey</li>
+                <li>Coding</li>
+            </ul>
+            
         </section>
         <section id="song">
             <!--Song that speaks to me and my current situation-->
