added photo gallary

--- a/index.html
+++ b/index.html
@@ -70,9 +70,22 @@
                 <li>Modern War history</li>
                 <li>Ice Hockey</li>
                 <li>Coding</li>
+                <li>Building computers</li>
             </ul>
             
         </section>
+
+        <section id="gallary">
+            <h2>photo gallary</h2>
+            <hr><figure><img src="/img/hockey1-640w.jpg" alt="Jack in hockey gear"></figure>
+            <figcaption>Hockey days (I wasn't that good)</figcaption>
+            <hr><figure><img src="/img/dog1-640w.jpg" alt="Black lab with open mouth"></figure>
+            <figcaption>Scarlet the dog</figcaption>
+            <hr><figure><img src="/img/rabbit-640w.jpg" alt="white and grey, lop eared rabbit"></figure>
+            <figcaption>Marcy the rabbit, she will be missed</figcaption><hr>
+        </section>
+
+
         <section id="song">
             <!--Song that speaks to me and my current situation-->
             <div>
