--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             
         </section>
 
-        <section id="gallary">
-            <h2>photo gallary</h2>
+        <section id="gallery">
+            <h2>photo gallery</h2>
             <hr><figure><img src="/img/hockey1-640w.jpg" alt="Jack in hockey gear"></figure>
             <figcaption>Hockey days (I wasn't that good)</figcaption>
             <hr><figure><img src="/img/dog1-640w.jpg" alt="Black lab with open mouth"></figure>
