--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>About Me</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@500&family=Tilt+Neon&family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@500&family=Tilt+Neon&family=Tilt+Warp&display=swap"
+        rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -59,7 +60,8 @@
                 <p>
                     I made my avitar happy not because I'm a happy person, but because I want to be. In reality I'm
                     scared to death of eveyone around me. By making my avitar happy, I make that my reality. I believe
-                    that if you speak what you want into reality, it becomes more possible! I want to be as good of a person I can be.  
+                    that if you speak what you want into reality, it becomes more possible! I want to be as good of a
+                    person I can be.
                 </p>
             </div>
         </section>
@@ -72,17 +74,21 @@
                 <li>Coding</li>
                 <li>Building computers</li>
             </ul>
-            
+
         </section>
 
         <section id="gallery">
             <h2>photo gallery</h2>
-            <hr><figure><img src="/img/hockey1-640w.jpg" alt="Jack in hockey gear"></figure>
+            <hr>
+            <figure><img src="/img/hockey1-640w.jpg" alt="Jack in hockey gear"></figure>
             <figcaption>Hockey days (I wasn't that good)</figcaption>
-            <hr><figure><img src="/img/dog1-640w.jpg" alt="Black lab with open mouth"></figure>
+            <hr>
+            <figure><img src="/img/dog1-640w.jpg" alt="Black lab with open mouth"></figure>
             <figcaption>Scarlet the dog</figcaption>
-            <hr><figure><img src="/img/rabbit-640w.jpg" alt="white and grey, lop eared rabbit"></figure>
-            <figcaption>Marcy the rabbit, she will be missed</figcaption><hr>
+            <hr>
+            <figure><img src="/img/rabbit-640w.jpg" alt="white and grey, lop eared rabbit"></figure>
+            <figcaption>Marcy the rabbit, she will be missed</figcaption>
+            <hr>
         </section>
 
 
@@ -130,6 +136,36 @@
                     Leave this desert for the sick and damned<br>
                 </p>
             </div>
+        </section>
+        <section>
+            <article id="lit">
+                <h2>Dr Jekyll and Mr Hyde</h2>
+                <div>
+                    <p>“I beg your pardon, Dr. Lanyon,” he replied civilly enough. “What you say is very well
+                        founded; and my impatience has shown its heels to my politeness. I come here at the instance
+                        of your colleague, Dr. Henry Jekyll, on a piece of business of some moment; and I
+                        understood...” He paused and put his hand to his throat, and I could see, in spite of his
+                        collected manner, that he was wrestling against the approaches of the hysteria--“I
+                        understood, a drawer...”</p>
+
+                    <p>But here I took pity on my visitor’s suspense, and some perhaps on my own growing curiosity.
+                    </p>
+
+                    <p>“There it is, sir,” said I, pointing to the drawer, where it lay on the floor behind a table
+                        and still covered with the sheet.</p>
+
+                    <p>He sprang to it, and then paused, and laid his hand upon his heart: I could hear his teeth
+                        grate with the convulsive action of his jaws; and his face was so ghastly to see that I grew
+                        alarmed both for his life and reason.</p>
+
+                    <p>“Compose yourself,” said I.</p>
+
+                    <p>He turned a dreadful smile to me, and as if with the decision of despair, plucked away the
+                        sheet. At sight of the contents, he uttered one loud sob of such immense relief that I sat
+                        petrified. And the next moment, in a voice that was already fairly well under control, “Have
+                        you a graduated glass?” he asked.</p>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
