--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div>
 
                 <P>
-                    Jack Walsh
+                    Jack Walshh
                 </p>
                 <p>
                     Hillsborough NJ
