made some changes to the pictures

--- a/index.html
+++ b/index.html
@@ -80,14 +80,22 @@
         <section id="gallery">
             <h2>photo gallery</h2>
             <hr>
-            <figure><img src="/img/hockey1-640w.jpg" alt="Jack in hockey gear"></figure>
-            <figcaption>Hockey days (I wasn't that good)</figcaption>
+            <figure>
+                <img src="/img/hockey1-640w.jpg" alt="Jack in hockey gear">
+                <figcaption>Hockey days (I wasn't that good)</figcaption>
+            </figure>
             <hr>
-            <figure><img src="/img/dog1-640w.jpg" alt="Black lab with open mouth"></figure>
-            <figcaption>Scarlet the dog</figcaption>
+            <figure>
+                <img src="/img/dog1-640w.jpg" alt="Black lab with open mouth">
+                <figcaption>Scarlet the dog</figcaption>
+            </figure>
+
             <hr>
-            <figure><img src="/img/rabbit-640w.jpg" alt="white and grey, lop eared rabbit"></figure>
-            <figcaption>Marcy the rabbit, she will be missed</figcaption>
+            <figure>
+                <img src="/img/rabbit-640w.jpg" alt="white and grey, lop eared rabbit">
+                <figcaption>Marcy the rabbit, she will be missed</figcaption>
+            </figure>
+
             <hr>
         </section>
 
