--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </section>
         <section id="video">
             <h2>A short video...</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/s4G7x6kvcbg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WgJv9OwQtvA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>A trailer for a movie of visuals that came out for Mastodon's "Crack the Skye" album</p>
         </section>
     </main>
