--- a/index.html
+++ b/index.html
@@ -180,6 +180,48 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/WgJv9OwQtvA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>A trailer for a movie of visuals that came out for Mastodon's "Crack the Skye" album</p>
         </section>
+
+        <section id="contact">
+            <h2>Contact Us:</h2>
+
+            <form id="contactForm" name="contactForm">
+                <fieldset>
+                    <legend>Contact Form</legend>
+                        <div id="formElements">
+                            <label for="name">Name (required):</label>
+                            <input type="text" id="name" name="name" required>
+                            <label for="email">Email (required):</label>
+                            <input type="email" id="email" name="email" required>
+                            <label for="phone">Phone number (not required):</label>
+                            <input type="tel" id="phone" name="phone">
+                            <label for="phoneType">Phone Type (not required):</label>
+                            <select id="phoneType">
+                                <option value="" selected>Select phone type</option>
+                                <option value="work">Work</option>
+                                <option value="home">Home</option>
+                                <option value="mobile">Mobile</option>
+                            </select>
+                            <label for="message">Message (not required):</label>
+                            <textarea id="message" name="message" rows="8"></textarea>
+                            <fieldset>
+                                <legend>Would you like a reply?</legend>
+                                    <ul>
+                                        <li>
+                                            <input type="radio" id="message-yes" name="reply">
+                                            <label for=message-yes>Yes, a reply would be nice!</label>
+                                        </li>
+                                        <li>
+                                            <input type="radio" id="message-no" name="reply" checked>
+                                            <label for="message-no">No thanks</label>
+                                        </li>
+                                    </ul>
+                            </fieldset>
+                            <button type="submit">submit</button>
+                        </div>
+                </fieldset>
+
+            </form>
+        </section>
     </main>
     <footer>
         © Jack Walsh-2023
