setup netlify part 1

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <section id="contact">
             <h2>Contact Us:</h2>
 
-            <form id="contactForm" name="contactForm">
+            <form id="contactForm" name="contactForm" method="post" data-netlify="true">
                 <fieldset>
                     <legend>Contact Form</legend>
                         <div id="formElements">
