--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </section>
 
         <section id="contact">
-            <h2>Contact Us:</h2>
+            <h2 id="formHeadder">Contact Us:</h2>
 
             <form id="contactForm" name="contactForm" method="post" data-netlify="true">
                 <fieldset>
