changed some style around

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- the header shows the logo and page title-->
         <!--<img src="/img/logo-96X96.svg" alt="blue origami bird"> -->
 
-        <h1>Web Dev I</h1>
+        <h1>ABOUT ME</h1>
 
     </header>
 
@@ -45,7 +45,7 @@
         </section>
         <section id="bio">
             <!--personal info (NOT TOO PERSONAL)-->
-            <div>
+            <div id="bioSection">
                 <br>
                 <p>
                     I want to be...
