added markup for navbar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,20 @@
     <header>
 
         <!-- the header shows the logo and page title-->
-        <!--<img src="/img/logo-96X96.svg" alt="blue origami bird"> -->
 
-        <h1>ABOUT ME</h1>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="/img/logo-96X96.svg" alt="blue origami bird">
+            </div>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#bio">Bio</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#lit">Blog</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
+                </ul>
+            </div>
+        </nav>
 
     </header>
 
