--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@500&family=Tilt+Neon&family=Tilt+Warp&display=swap"
         rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/nav.css" rel="stylesheet">
 </head>
 
 <body>
