--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         <nav class="navbar">
             <div class="logo">
+                <h1>Web Dev I</h1>
                 <img src="/img/logo-96X96.svg" alt="blue origami bird">
             </div>
             <div class="navbar-links">
