added some new style

--- a/index.html
+++ b/index.html
@@ -61,16 +61,10 @@
             <!--personal info (NOT TOO PERSONAL)-->
             <div id="bioSection">
                 <br>
-                <p>
+                <p id="iWant">
                     I want to be...
                 </p>
-                <ul>
-                    <li>mentally flexible</li>
-                    <li>safe</li>
-                    <li>financially secure</li>
-                    <li>free from my emotions and anxiety</li>
-                    <li>work a nice defense job</li>
-                </ul>
+                <h2>SAFE AND FULFILLED 😁</h2>
                 <p>
                     I made my avitar happy not because I'm a happy person, but because I want to be. In reality I'm
                     scared to death of eveyone around me. By making my avitar happy, I make that my reality. I believe
