--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2>hobbies</h2>
             <ul>
                 <li>PC gaming</li>
-                <li>Modern War history</li>
+                <li>War history</li>
                 <li>Ice Hockey</li>
                 <li>Coding</li>
                 <li>Building computers</li>
