some style changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div>
 
                 <P>
-                    Jack Walsh
+                    Jack
                 </p>
                 <p>
                     Hillsborough NJ
@@ -62,15 +62,14 @@
             <!--personal info (NOT TOO PERSONAL)-->
             <div id="bioSection">
                 <br>
+                <h2>Bio</h2>
+                <br>
                 <p id="iWant">
                     I want to be...
                 </p>
-                <h2>SAFE AND FULFILLED 😁</h2>
+                <h2>SAFE AND FULFILLED...</h2>
                 <p>
-                    I made my avitar happy not because I'm a happy person, but because I want to be. In reality I'm
-                    scared to death of eveyone around me. By making my avitar happy, I make that my reality. I believe
-                    that if you speak what you want into reality, it becomes more possible! I want to be as good of a
-                    person I can be.
+                    Growing up I was a very happy child and it all changed once I got a little older and realized the world wasn’t so pretty. I went through some serious bouts with my mental health and at times I felt like giving up completely. With some help from family, friends, and a very talented support team, I’ve been able to make many changes that allowed me to love myself more and grow. I have some new challenges now, as becoming an adult is scary and everyone seems like they’re out to get me and watch me fail. I have to remind myself that I have many people who love me and would like nothing more than to see me suceed. I have a long way to go and a lot I want to get done before I go, but at the rate I’m going now, I’ll get that done and more!
                 </p>
             </div>
         </section>
