style and text changes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <hr>
             <figure>
                 <img src="/img/hockey1-640w.jpg" alt="Jack in hockey gear">
-                <figcaption>Hockey days (I wasn't that good)</figcaption>
+                <figcaption>Hockey days</figcaption>
             </figure>
             <hr>
             <figure>
@@ -103,7 +103,7 @@
             <hr>
             <figure>
                 <img src="/img/rabbit-640w.jpg" alt="white and grey, lop eared rabbit">
-                <figcaption>Marcy the rabbit, she will be missed</figcaption>
+                <figcaption>Marcy, whom I miss so much</figcaption>
             </figure>
 
             <hr>
