--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <ul>
                     <li><a href="#bio">Bio</a></li>
                     <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#song">Song</a></li>
                     <li><a href="#lit">Blog</a></li>
                     <li><a href="#video">Video</a></li>
                     <li><a href="#contact">Contact Me</a></li>
