added hamburger and made some final style changes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 <img src="/img/Righteous.svg" alt="the initials JW in a fancy font">
                 <h1>Web Dev I</h1>
             </div>
+
+            <input type="checkbox" id="navCheckbox" class="navCheckbox">
+                <label for="navCheckbox" class="navToggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" class= "menu" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="50px" height="50px" fill-rule="nonzero"><g fill="#333333" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,256v-256h256v256z" id="bgRectangle"></path></g><g fill="#f5f5f5" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M0,7.5v5h50v-5zM0,22.5v5h50v-5zM0,37.5v5h50v-5z"></path></g></g></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class= "close" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256" width="50px" height="50px" fill-rule="nonzero"><g fill="#333333" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,256v-256h256v256z" id="bgRectangle"></path></g><g fill="#f5f5f5" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M9.15625,6.3125l-2.84375,2.84375l15.84375,15.84375l-15.9375,15.96875l2.8125,2.8125l15.96875,-15.9375l15.9375,15.9375l2.84375,-2.84375l-15.9375,-15.9375l15.84375,-15.84375l-2.84375,-2.84375l-15.84375,15.84375z"></path></g></g></svg>
+                </label>
+
             <div class="navbar-links">
                 <ul>
                     <li><a href="#bio">Bio</a></li>
@@ -37,9 +44,13 @@
                     <li><a href="#video">Video</a></li>
                     <li><a href="#contact">Contact Me</a></li>
                 </ul>
+
+                
+
             </div>
         </nav>
 
+    <hr>
     </header>
 
     <main>
@@ -49,26 +60,20 @@
             <!--hero section, shows personal stuff-->
             <img src="/img/avataaars.png" alt="blonde man with short hair and happy expression">
 
-            <div>
-
-                <P>
-                    Jack
-                </p>
-                <p>
-                    Hillsborough NJ
-                </p>
+            <div id="profileCaption">
+                <figcaption>Jack</figcaption>
             </div>
         </section>
         <section id="bio">
             <!--personal info (NOT TOO PERSONAL)-->
             <div id="bioSection">
                 <br>
-                <h2>Bio</h2>
+                <h1>Bio</h1>
                 <br>
                 <p id="iWant">
                     I want to be...
                 </p>
-                <h2>SAFE AND FULFILLED...</h2>
+                <h2>SAFE AND FULFILLED</h2>
                 <p>
                     Growing up I was a very happy child and it all changed once I got a little older and realized the world wasn’t so pretty. I went through some serious bouts with my mental health and at times I felt like giving up completely. With some help from family, friends, and a very talented support team, I’ve been able to make many changes that allowed me to love myself more and grow. I have some new challenges now, as becoming an adult is scary and everyone seems like they’re out to get me and watch me fail. I have to remind myself that I have many people who love me and would like nothing more than to see me suceed. I have a long way to go and a lot I want to get done before I go, but at the rate I’m going now, I’ll get that done and more!
                 </p>
