--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         <section>
             <article id="lit">
                 <h2>The History of the Hamburger Icon</h2>
+                <img src="/img/icons8-menu (3).svg" alt="three lines on top of eachother. Also known as the hamburger icon">
                 <div>
                     <p> The hamburger icon is one of the most recognizable elements of modern web design and a personal favorite aspect of my website. This little hamburger has changed the way people navigate mobile and even desktop websites, and from the looks of it, it will stick around. It was a little rough getting it working on my site but after a lot of tweaking in CSS, I was able to not only get it working, but make it look quite nice on my site. When I first learned the name of the icon, the name immediately reminded me of the styles of folding paper I learned in grammar school; the hotdog and the hamburger. This however, had little to do with the icon’s shape or makeup.</p>
                     <p> The hamburger Icon traces its roots back to 1981, designed by Norm Cox as part of the design for the Xerox Star personal computer. He wanted to make a symbol “road-sign simple” to help the computing world, at least for Xerox at the time, have a simple and recognizable symbol for selecting the menu of a program, as the internet as we know it today wasn’t even around yet! Microsoft later adopted the symbol for their early Windows operating systems, but it wasn’t until 2009 when the icon made its biggest leap yet onto mobile phone compatible websites.</p>
